<resources>
    <string name="app_name">Repeat</string>
    <string name="how_many_times">How Many Times</string>
    <string name="enter_the_word">Enter the word</string>
    <string name="convert">Convert</string>
    <string name="ans_is">                  Ans Is !     </string>
    <string name="login">Login</string>
    <string name="follow_insta">Follow Insta</string>
    <string name="location">Storage</string>
    <string name="notify_me">Notify ME</string>
    <string name="notify_mee">Notify Me</string>
</resources>