<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@drawable/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints">

    <EditText
        android:id="@+id/ed1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/enter_the_word"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="#CBFFFFFF"
        android:textSize="25sp"
        tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />

    <EditText
        android:id="@+id/ed2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/how_many_times"
        android:inputType="number"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="#CBFFFFFF"
        android:textSize="25sp"
        tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />


    <EditText
        android:id="@+id/t1"
        android:layout_width="wrap_content"
        android:layout_height="147dp"
        android:layout_below="@+id/b1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="108dp"
        android:hint="@string/ans_is"
        android:textColorHint="#CBFFFFFF"
        android:background="@drawable/output"
        android:importantForAutofill="no"
        android:paddingStart="20dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="28sp"
        tools:ignore="RtlSymmetry,SpeakableTextPresentCheck,TextFields,VisualLintBounds,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/b1"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:background="@drawable/btn"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/convert"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/btn"
        android:text="@string/notify_mee" />

</RelativeLayout>